--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>titulo do site</h1>
+            <h1>cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo m1</h2>
-            <p>texto do artigo m1</p>
+            <h2>Curso html com css</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo velit consequatur iste voluptatibus eum vitae eveniet quisquam! Magnam ad nam, nobis aperiam iure iste dolores alias tenetur dolore consectetur atque?</p>
+        </article>
+        <article>
+            <h2>curso de java</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, temporibus. Architecto laudantium, quidem, repellendus libero molestiae ex maiores numquam veniam suscipit iusto nam, corporis odio expedita saepe. Unde, ipsa perspiciatis.</p>
         </article>
     </main>
 </body>
